<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.UI.activity.mapActivity"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/first_title"-->
        <!--android:layout_marginTop="50dp"-->
        <!--android:layout_marginLeft="15dp"-->
        <!--android:textColor="@color/colorBlack"-->
        <!--android:textSize="20dp"/>-->

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="15dp"-->
        <!--android:text="@string/exam_items"/>-->

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/second_title"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_marginLeft="15dp"-->
        <!--android:textSize="17dp"-->
        <!--android:textColor="@color/colorBlack"-->
        <!--/>-->

    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="15dp"-->
        <!--android:text="@string/item_info"/>-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="200dp">

        <TextView
            android:id="@+id/position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"/>

         <EditText
             android:id="@+id/target"
            android:layout_width="90dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/position2"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end"/>

        <AutoCompleteTextView
            android:id="@+id/endpoint"
            android:layout_width="100dp"
            android:layout_height="50dp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/buttonserach"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/search"/>
        <Button
            android:id="@+id/buttonroute"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/route"/>
        <Button
            android:id="@+id/buttonswitch"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:text="@string/switches"/>
        <Button
            android:id="@+id/buttonchoose_map_mode"
            android:layout_width="97dp"
            android:layout_height="wrap_content"
            android:text="@string/mapmode"/>
        <Button
            android:id="@+id/button_hot_map"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:text="@string/hotmap"/>
    </LinearLayout>


    <com.baidu.mapapi.map.MapView
        android:id="@+id/mmap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></com.baidu.mapapi.map.MapView>



</LinearLayout>
